fix(core): image flickering while sliding

--- a/src/app/shared/components/image-slider/image-slider.component.scss
+++ b/src/app/shared/components/image-slider/image-slider.component.scss
@@ -3,144 +3,123 @@
 .slider {
   width: 420px;
   height: 490px;
-  overflow: hidden;
   position: relative;
   background: #fff;
   border: 20px solid #fff;
   border-radius: 30px;
-  padding: 40px;
+  overflow: hidden;
+}
+
+.slider-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .slide {
+  width: 100%;
   height: 100%;
-  padding: 10px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #fff;
 }
 
-.image-wrapper{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  
-  transform: translate(-50%, -50%);
-  height: 100%;
-  background-color: #fff;
+.slide-image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  -webkit-user-drag: none;
+  user-select: none;
 }
-
 
 .arrow {
   position: absolute;
   z-index: 1002;
-  display: block;
   top: 50%;
-  margin-top: -20px;
+  transform: translateY(-50%);
   width: 36px;
   height: 71px;
-  outline: none !important;
   cursor: pointer;
-  background: url(/assets/images/blank.gif) no-repeat;
+  background: transparent;
   border: none;
-}
-
-.arrow.prev {
+  outline: none;
+  transition: opacity 0.2s linear;
   opacity: 0.2;
-  left: 0px;
-  background-image: url(/assets/icons/arrow-left-round.svg);
-  transition: 0.2s linear all;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &.prev {
+    left: 10px;
+    background: url(/assets/icons/arrow-left-round.svg) no-repeat center;
+  }
+
+  &.next {
+    right: 10px;
+    background: url(/assets/icons/arrow-right-round.svg) no-repeat center;
+  }
 }
-
-.arrow.next {
-  opacity: 0.2;
-  right: 0px;
-  background-image: url(/assets/icons/arrow-left-round.svg);
-  transition: 0.2s linear all;
-}
-
-.arrow.prev:hover {
-  opacity: 1;
-  background-image: url(/assets/icons/arrow-left-round.svg);
-}
-
-.arrow.next:hover {
-  opacity: 1;
-  background-image: url(/assets/icons/arrow-left-round.svg);
-}
-
-
-/*---------------------------------------------------------
-  NAV
-  ---------------------------------------------------------*/
 
 .nav {
-  text-align: center;
-  display: block;
   position: absolute;
   z-index: 1002;
   left: 0;
-  bottom: -4px;
   right: 0;
-  height: 48px;
+  bottom: 10px;
+  text-align: center;
 }
 
-.nonDraggableImage {
-  -webkit-user-drag: none;
-}
-
-.nav .wrapper {
+.wrapper {
   margin: 0 auto;
-  width: 100%;
-  padding: 2em 0.5em 0 0.8em;
+  padding: 0 0.5em;
 }
 
-.nav ul {
+.dots {
   margin: 0;
-  width: 100%;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
 }
 
-.nav .dot,
-.nav .dot span {
-  display: inline-block;
-  zoom: 1;
-  cursor: pointer;
-}
-
-.dots .dot {
-  position: relative;
-  margin: 0 8px;
+.dot {
   width: 12px;
   height: 12px;
+  position: relative;
+
+  span {
+    display: block;
+    width: 8px;
+    height: 8px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: $blue;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    transition: all 0.25s ease;
+    cursor: pointer;
+
+    &.active {
+      background-color: transparent;
+      border-color: $blue;
+      transform: translate(-50%, -50%) scale(1.5);
+    }
+  }
 }
 
-.dots .dot span {
+.sr-only {
   position: absolute;
-  top: 2px;
-  left: 2px;
-  width: 6px;
-  height: 6px;
-  text-indent: 100%;
-  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
   overflow: hidden;
-  background: $blue;
-  border: 1px solid transparent;
-  outline: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  -webkit-transition:
-    background-color 0.25s,
-    border-color 0.25s;
-  -moz-transition:
-    background-color 0.25s,
-    border-color 0.25s;
-  transition:
-    background-color 0.25s,
-    border-color 0.25s;
-}
-
-.dots .dot span.active {
-  border-color: $blue;
-  background-color: transparent;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
